--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,10 @@ development:
   <<: *default
   database: walmart_dev
 
+dwhouse_development:
+  <<: *default
+  database: dwh_development
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
